progs/tests/blob/faulty_num_arguments.sy
A :: blob {
    a: int
    b: int
}

start :: fn {
    a :: A(1, 2, 3)
    a
}

// error: #ArgumentCount(2, 3)
